# Educational_RAG_System

./: .gitignore  README.md  app.py  config.ini.example  main.py  pyproject.toml  start.bat
base/: __init__.py  config.py  logger.py
mysql_qa/: __init__.py  mysql_main.py
mysql_qa/cache/: redis_client.py
mysql_qa/db/: mysql_client.py
mysql_qa/retrieval/: bm25_search.py
mysql_qa/utils/: preprocess.py
rag_qa/: __init__.py  rag_main.py
rag_qa/core/: document_processor.py  prompts.py  query_classifier.py  rag_system.py  strategy_selector.py  vector_store.py
rag_qa/edu_document_loaders/: __init__.py  edu_docloader.py  edu_imgloader.py  edu_ocr.py  edu_pdfloader.py  edu_pptloader.py  review.py
rag_qa/edu_text_spliter/: __init__.py  edu_chinese_recursive_text_splitter.py  edu_model_text_spliter.py  review.py
static/: index.html
