[project]
name = "edurag"
version = "1.0.0"
description = "教育领域智能问答系统 — 融合关键词匹配与语义检索双引擎的 RAG 问答系统"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Happy Chen", email = "19867713117@163.com"},
]
keywords = ["rag", "education", "question-answering", "llm", "milvus", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ========== PyTorch 生态 ==========
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",

    # ========== HuggingFace 生态 ==========
    "transformers>=4.51.0",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "peft>=0.15.0",
    "accelerate>=1.6.0",
    "datasets>=2.21.0",
    "tokenizers>=0.21.0",

    # ========== LangChain 生态 ==========
    "langchain>=0.3.24,<1.0.0",
    "langchain-core>=0.3.55,<1.0.0",
    "langchain-community>=0.3.22,<0.4.0",
    "langchain-text-splitters>=0.3.8,<1.0.0",
    "langchain-milvus>=0.1.8,<0.3.0",
    "langchain-ollama>=0.2.3,<1.0.0",
    "langsmith>=0.3.9",

    # ========== 向量数据库 ==========
    "pymilvus>=2.5.4",
    "milvus-model>=0.2.12",
    "FlagEmbedding>=1.3.4",

    # ========== 关系型/缓存数据库 ==========
    "PyMySQL>=1.1.1",
    "redis>=5.2.1",
    "SQLAlchemy>=2.0.39",

    # ========== 数据处理与科学计算 ==========
    "numpy>=1.26.0",
    "numba>=0.61.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.12.0",

    # ========== 中文 NLP ==========
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "langdetect>=1.0.9",
    "nltk>=3.9.1",

    # ========== 模型仓库 ==========
    "modelscope>=1.25.0",

    # ========== 文档处理 ==========
    "Pillow>=11.0.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "opencv-python>=4.11.0",
    "rapidocr-onnxruntime>=1.4.0",
    "unstructured>=0.17.0",
    "pypdf>=5.4.0",

    # ========== LLM API 客户端 ==========
    "openai>=1.75.0",
    "ollama>=0.4.7",

    # ========== Web 服务 ==========
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ========== 工具与通用库 ==========
    "tqdm>=4.67.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "rich>=14.0.0",
    "Jinja2>=3.1.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.13.0",
    "markdown>=3.8.0",
    "cryptography>=44.0.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.20",
    "ffmpy>=0.5.0",
    "pydub>=0.25.0",
    "nest-asyncio>=1.6.0",
    "backoff>=2.2.1",
    "coloredlogs>=15.0.0",
    "aiofiles>=24.1.0",
    "addict>=2.4.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "onnxruntime>=1.21.0",
    "bitsandbytes>=0.45.0",
]

[project.scripts]
edurag = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from-inside-except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
